--- a/src/app/application/deployment-verification/correlation/correlation.component.less
+++ b/src/app/application/deployment-verification/correlation/correlation.component.less
@@ -18,3 +18,12 @@
   padding-left: 10px;
   padding-right: 10px;
 }
+
+::ng-deep .modal-content{
+  width: 1000px;
+  margin-left: -200px;
+}
+.subChartSize
+{
+  width: 100%;
+}
