--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -126,7 +126,7 @@
       </div>
     </div>
     <div class="tab-content" id="myTabDefaultContent" #LogClusterWidth>
-      <div class="tab-pane py-4 fade show active" id="{{eventTab}}" role="tabpanel" aria-labelledby=""Collapse All
+      <div class="tab-pane py-4 fade show active" id="{{eventTab}}" role="tabpanel" aria-labelledby=""
         [style.width]="logClusterWidth">
         <div class="accordion accordion-errors" id="accordionExample" *ngIf="logAnalysisData?.clusters?.length > 0">
 
@@ -150,7 +150,7 @@
                 </select>
 
                 <i class="far fa-comment-alt ml-2 text-primary clickable" [ngClass]="{'blink_me':log.id == selectedClusterInfo?.id && commentNotificationMessage!=''}" aria-hidden="true" id="criticalityComment" data-toggle="dropdown"></i>
-                <span class="badge badge-info comment-badge" *ngIf="log.id == selectedClusterInfo?.id" [innerHTML]='commentNotificationMessage'></span>
+                <span class="badge badge-info comment-badge clickable" *ngIf="log.id == selectedClusterInfo?.id" [innerHTML]='commentNotificationMessage' id="criticalityComment" data-toggle="dropdown"></span>
                   
                 <div class="dropdown-menu px-3 py-2 dropdown-shadow dropdown-reason dropdown-menu-right" aria-labelledby="criticalityComment">
                   <div class="dropdown_header d-flex align-items-center justify-content-between mb-2">
@@ -179,10 +179,9 @@
                     {{tag}}
                   </option> 
                 </select>
-                <i class="far fa-comment-alt ml-2 text-primary clickable" aria-hidden="true" id="clustertagComment"
-                  data-toggle="dropdown"></i>
-                <div class="dropdown-menu px-3 py-2 dropdown-shadow dropdown-reason dropdown-menu-right"
-                  aria-labelledby="clustertagComment">
+                <i class="far fa-comment-alt ml-2 text-primary clickable" aria-hidden="true" id="clustertagComment" data-toggle="dropdown"></i>
+                <span class="badge badge-info comment-badge clickable" *ngIf="log.id == selectedClusterInfo?.id" [innerHTML]='tagCommentNotificationMessage' id="clustertagComment" data-toggle="dropdown"></span>
+                <div class="dropdown-menu px-3 py-2 dropdown-shadow dropdown-reason dropdown-menu-right" aria-labelledby="clustertagComment">
                   <div class="dropdown_header d-flex align-items-center justify-content-between mb-2">
                     <span>Logs cluster tag</span>
                     <i class="fa text-muted fa-times"></i>
