providing the cancel option to clear the logtemplate form

--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
@@ -210,6 +210,8 @@
                      </div>
                   </div>
                   <div>
+                    <button type="button" mat-button matStepperNext class="btn btn-warning pull-left" (click)="cancelLogForm()" type="reset" data-dismiss="modal" aria-label="Close">Cancel</button>
+
                     <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next pull-right btn-color" (click)="getLogTopics()">Next</button>
                   </div>
                 </form>
@@ -277,8 +279,10 @@
                      </div>
                   </div>
                   <div>
-                    <button mat-button matStepperPrevious class="pull-left btn-color ">Back</button>
-                    <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next pull-right btn-color">Next</button>
+                    <button type="button" mat-button matStepperNext class="btn btn-warning pull-left" (click)="cancelLogForm()" type="reset" data-dismiss="modal" aria-label="Close">Cancel</button>
+                    <button type="button" mat-button matStepperNext class="btn btn-primary sw-btn-next btn-color pull-right" style="margin-left: 10px;">Next</button>
+                    <button mat-button matStepperPrevious class="pull-right btn-color">Back</button>
+
                   </div>
                 </form>
               </mat-step>
@@ -343,8 +347,9 @@
                     </div>
                   </div>
                   <div>
-                    <button mat-button matStepperPrevious class="pull-left btn btn-primary btn-color ">Back</button>
-                    <button mat-button matStepperNext type="button" class="btn btn-primary sw-btn-next pull-right btn-color " (click)="SubmitForm()">Submit</button>
+                    <button type="button" mat-button matStepperNext class="btn btn-warning pull-left" (click)="cancelLogForm()" type="reset" data-dismiss="modal" aria-label="Close">Cancel</button>
+                    <button mat-button matStepperNext type="button" class="btn btn-primary sw-btn-next pull-right btn-color " (click)="SubmitForm()" style="margin-left: 10px;">Submit</button>
+                    &nbsp;&nbsp;<button mat-button matStepperPrevious class="pull-right btn btn-primary btn-color">Back</button>
                   </div>
                 </form>
               </mat-step>
