Side bar alignment issue fixes

--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.html
@@ -88,7 +88,7 @@
   </div>
   <!-- /.graph_area -->
 
-  <div class="tab-default pt-3">
+  <div class="tab-default pt-3" id="logeventsTab">
     <div class="row">
       <div class="col-10" style="padding-right: 0px;">
         <ul class="nav nav-tabs" id="myTabDefault" role="tablist">
