--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -570,18 +570,19 @@
                       </ul>
                 </div>
                   <div class="nav-item ml-auto padding0 col-sm-1">
-                    <button class="pull-right adjustwidth" data-toggle="tooltip" data-placement="left" title="Overall canary run inforamtion for the selected application"  mat-button>
+                    <button class="pull-right adjustwidth" data-toggle="tooltip" data-placement="left" title="Overall canary run inforamtion for the selected application"  id="sideButton" mat-button>
                       <div *ngIf="isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-right"></i><i  class="fa fa-chevron-right"></i></div>
                       <div *ngIf="!isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-left"></i><i  class="fa fa-chevron-left"></i></div>
                     </button>
                   </div>
                 </div>
                   
-                  <div class="tab-content" id="myTabContent" (click)="onClickAnalysisSection($event)">
+                
+                  <div class="tab-content" id="myTabContent" >
                     <div class="tab-pane p-4 fade " id="log-analysis" role="tabpanel" aria-labelledby="log-analysis-tab"
                     [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics','show': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}">
                         <ng-container *ngIf = "selectedTab === 'log-analysis'">
-                          <app-log-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" (selectedServiceId)="getlogAnalysisData($event)"></app-log-analysis>
+                          <app-log-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" (selectedServiceId)="getlogAnalysisData($event)" (enterdToLogLines)="getEventsFromLogAnalysis($event)"></app-log-analysis>
                         </ng-container>
                       </div>
                       <div class="tab-pane mp-4"  id="metric-analysis" role="tabpanel" aria-labelledby="metric-analysis-tab"
