bugs fixes in correlation

--- a/src/app/charts/line-chart/line-chart.component.html
+++ b/src/app/charts/line-chart/line-chart.component.html
@@ -21,6 +21,6 @@
   (select)="onSelect($event)"
   (activate)="onActivate($event)"
   (deactivate)="onDeactivate($event)"
-  style="fill: #999999;">
+  style="fill: #999999; color: black;">
 </ngx-charts-line-chart>
 </div>
