--- a/src/app/application/deployment-verification/correlation/correlation.component.html
+++ b/src/app/application/deployment-verification/correlation/correlation.component.html
@@ -27,7 +27,7 @@
    -->
    <!-- button to add log bar graph -->
    <div #subChartSize class="buttonDiv width100">
-  <button class="btn btn-default float-right" (click)="openModal(template,'log')">Add Logs</button>
+  <button class="btn btn-default float-right  addBtns" (click)="openModal(template,'log')">Add Logs</button>
   </div>
   
   <!-- loop for displaying log bar graph -->
@@ -47,13 +47,13 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-      <app-correlationform [data]="unexpectedClusters" [addLogsJson]="addLogsJson" [serviceInfo]="serviceList" [flag]="addFlag"  (onSubmitsaveData)=onSubmitsaveData($event) (onSubmitPostData)=onSubmitPostData($event) (onSelectedServiceChange)=onSelectedServiceChange($event) (onCancelClicked)="hideAddLog($event)" ></app-correlationform>
+      <app-correlationform [data]="unexpectedClusters" [selectedServiceIndex]="selectedServiceIndex" [selectedServiceInitially]="serviceId"  [addLogsJson]="addLogsJson" [serviceInfo]="serviceList" [flag]="addFlag"  (onSubmitsaveData)=onSubmitsaveData($event) (onSubmitPostData)=onSubmitPostData($event) (onSelectedServiceChange)=onSelectedServiceChange($event) (onCancelClicked)="hideAddLog($event)" ></app-correlationform>
       
       
     </ng-template>
 
     <div class="buttonDiv">
-      <button class="btn btn-default float-right" (click)="openModal(template1,'metric')">Add Metrics</button>
+      <button type="button" class="btn btn-default float-right addBtns " (click)="openModal(template1,'metric')">Add Metrics</button>
       </div>
 
     <ng-template #template1>
@@ -63,7 +63,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-        <app-correlationform [data]="allMetricsData" [selectedServiceInitially]="serviceId" [addLogsJson]="addMetricJson" [serviceInfo]="serviceList" [flag]="addFlag" (onSubmitsaveData)=onSubmitsaveData($event) (onSubmitPostData)=onSubmitPostData($event) (onSelectedServiceChange)=onSelectedServiceChange($event) (onCancelClicked)="hideAddLog($event)" ></app-correlationform>
+        <app-correlationform [data]="allMetricsData" [selectedServiceIndex]="selectedServiceIndex" [selectedServiceInitially]="serviceId" [addLogsJson]="addMetricJson" [serviceInfo]="serviceList" [flag]="addFlag" (onSubmitsaveData)=onSubmitsaveData($event) (onSubmitPostData)=onSubmitPostData($event) (onSelectedServiceChange)=onSelectedServiceChange($event) (onCancelClicked)="hideAddLog($event)" ></app-correlationform>
         
         
       </ng-template>
