--- a/src/app/charts/time-analysis-chart/time-analysis-chart.component.less
+++ b/src/app/charts/time-analysis-chart/time-analysis-chart.component.less
@@ -2,13 +2,14 @@
    
     top: 0;
     right: 0;
-    padding: 5px;
+    padding: 3px;
     line-height: 14px;
     min-width: auto;
     background-color: #f4f8fb !important;
     border: 1px solid blue;
     margin-bottom: 3px;
     margin-top: 3px;
+    font-size: 20px;
   }
   .alignHeading
   {
