--- a/src/app/application/deployment-verification/deployment-verification.component.less
+++ b/src/app/application/deployment-verification/deployment-verification.component.less
@@ -289,3 +289,14 @@ paddingLeftRight5
 {
   margin-top:  -3rem!important;
 }
+.chart-legend .legend-label{
+  color: black !important;
+}
+.tooltip-inner {
+  max-width: 600px; /* the minimum width */
+}
+.addBtns,.addBtns:hover
+{
+  background-color:#52c0ff !important;
+  color: white !important;
+}
