--- a/src/app/application/deployment-verification/correlation/correlation.component.less
+++ b/src/app/application/deployment-verification/correlation/correlation.component.less
@@ -20,8 +20,8 @@
 }
 
 ::ng-deep .modal-content{
-  width: 1000px;
-  margin-left: -200px;
+  width: 1400px;
+  margin-left: -400px;
 }
 .subChartSize
 {
@@ -29,4 +29,9 @@
 }
 .tooltip-inner {
   max-width: 600px; /* the minimum width */
+}
+.width100Parent
+{
+  width: 100%;
+  display: inline-block;
 }
