Fixed for trend analysis:

--- a/src/app/application/trend-analysis/trend-analysis.component.less
+++ b/src/app/application/trend-analysis/trend-analysis.component.less
@@ -31,3 +31,29 @@ g.line-chart > g:last-of-type > g:nth-child(1) g.line-series > path {
 .chart-legend .legend-label .active .legend-label-text{
     background-color: white !important;
 }
+
+// .ngx-charts-outer {
+//     display: flex !important;
+//     width: 100% !important;
+//     svg{
+//         width: unset !important;
+//     }
+// }
+// .ngx-charts-outer .chart-legend {
+//     width: auto !important;
+//     display: table-header-group !important;
+// }
+
+.ngx-charts-outer .chart-legend {
+    width: 100% !important;
+    display: block !important;
+}
+.issuesPadding{
+    padding-top: 30px;
+}
+.riskPadding{
+    padding: 0px !important;
+}
+.issuesChartPadding{
+    padding-left: 15px;
+}
