--- a/src/app/charts/stacked-area-chart/stacked-area-chart.component.html
+++ b/src/app/charts/stacked-area-chart/stacked-area-chart.component.html
@@ -14,5 +14,5 @@
 [legendPosition]="legendPosition" 
 [results]="dataSource" 
 (select)="onSelect($event)"
-style="fill: #999999;" style="display: flex">
+style="fill: #999999; color:black; display: flex">
 </ngx-charts-area-chart-stacked>
