--- a/src/app/application/trend-analysis/trend-analysis.component.html
+++ b/src/app/application/trend-analysis/trend-analysis.component.html
@@ -50,48 +50,44 @@
             <!-- /.page_title d-flex -->
             <div class="row no-gutters">
                 <div class="col-md-12 col-lg-12 col-xs-12 col-sm-12">
-                    <mat-drawer-container class="example-container" autosize>
-                            <div class="d-flex flex-column">
-                                <!-- <div class="d-flex justify-content-end pr-5">
-                                    <div class="pt-2 dropdown">
-                                        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-                                            aria-haspopup="true" aria-expanded="false">Select Duration
-                                        </button>
-                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                            <a class="dropdown-item" href="#">1 Day</a>
-                                            <a class="dropdown-item" href="#">1 Week</a>
-                                            <a class="dropdown-item" href="#">1 Month</a>
-                                            <a class="dropdown-item" href="#">3 Months</a>
-                                        </div>
+                        <div class="d-flex flex-column">
+                            <!-- <div class="d-flex justify-content-end pr-5">
+                                <div class="pt-2 dropdown">
+                                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                                        aria-haspopup="true" aria-expanded="false">Select Duration
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                        <a class="dropdown-item" href="#">1 Day</a>
+                                        <a class="dropdown-item" href="#">1 Week</a>
+                                        <a class="dropdown-item" href="#">1 Month</a>
+                                        <a class="dropdown-item" href="#">3 Months</a>
                                     </div>
-                                </div> -->
-                                <div class="mb-2 text-center d-flex flex-column">
-                                    <div class="pl-3 pr-3 pt-4 d-flex flex-column" id="ngxLineChart" #setChartSize> 
-                                        <h5>Risk Score</h5>
-                                        <p> </p>
-                                        <ngx-charts-line-chart  [view]="view"  *ngIf="riskScoreDisplay"   [scheme]="IssuesLogsScheme" [legend]="legend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxis]="xAxis" [yAxis]="yAxis" [xAxisLabel]="riskxAxisLabel"  [yAxisLabel]="yAxisLabel" [timeline]="timeline" [results]="createRiskChartData" #chart>
-                                        </ngx-charts-line-chart> 
-                                        <div *ngIf="!riskScoreDisplay">
-                                            No data to display Risk Score!
-                                        </div>
-                                        <p> </p>
+                                </div>
+                            </div> -->
+                            <div class="mb-2 text-center d-flex flex-column">
+                                <div class="pl-3 pr-3 pt-4 d-flex flex-column" id="ngxLineChart" #setChartSize> 
+                                    <h5 class="riskPadding">Risk Score</h5>
+                                    <p> </p>
+                                    <app-line-chart *ngIf="riskScoreDisplay" [view]="view" [chartProperty]="riskChartProperty" [dataSource]="createRiskChartData"  ></app-line-chart>
+                                    <!-- <ngx-charts-line-chart *ngIf="riskScoreDisplay" [view]="view"  [animations]="animations"  [scheme]="IssuesLogsScheme" [results]="createRiskChartData" [legend]="showLegend" [legendTitle]="legendTitle" [showXAxisLabel]="showXAxisLabel" [xAxis]="showXAxis" [showYAxisLabel]="showYAxisLabel" [yAxis]="showYAxis" [xAxisLabel]="riskxAxisLabel"  [yAxisLabel]="riskyAxisLabel" [timeline]="timeline" [trimXAxisTicks]="trimXAxisTicks" #chart>
+                                    </ngx-charts-line-chart>  -->
+                                    <div *ngIf="!riskScoreDisplay">
+                                        No data to display Risk Score!
                                     </div>
+                                    <p> </p>
+                                    <h5 class="issuesPadding">Issues - Logs - {{serviceNameInfo['serviceName'] !== undefined ? serviceNameInfo['serviceName']: ''}}</h5>
+                                    <p> </p>
+                                    <app-stacked-area-chart *ngIf="issuesLogsDisplay" [view]="view" [chartProperty]="issuesChartProperty" [dataSource]="createIssuesLogChartData" class="issuesChartPadding"  ></app-stacked-area-chart>
 
-                                    <div class="pl-3 pr-3 pt-4 d-flex flex-column">
-                                        <h5>Issues - Logs</h5>
-                                        <p> </p>
-                                        <ngx-charts-area-chart-stacked *ngIf="issuesLogsDisplay" [view]="view"  [scheme]="colorScheme" [results]="createIssuesLogChartData" [animations]="animations" [gradient]="gradient"
-                                            [xAxis]="showXAxis" [yAxis]="showYAxis" [legend]="showLegend" [showXAxisLabel]="showXAxisLabel"
-                                            [showYAxisLabel]="showYAxisLabel"  [timeline]="timeline" [xAxisLabel]="issuesxAxisLabel" [yAxisLabel]="yAxisLabel"  [trimXAxisTicks]="trimXAxisTicks"
-                                            style="fill: #999999;"> 
-                                        </ngx-charts-area-chart-stacked>
-                                        <div *ngIf="!issuesLogsDisplay">
-                                            No data to display Issues - Logs!
-                                        </div>
+                                    <!-- <ngx-charts-area-chart-stacked *ngIf="issuesLogsDisplay" [view]="view" [animations]="animations" [scheme]="colorScheme"
+                                        [results]="createIssuesLogChartData" [legend]="showLegend" [legendTitle]="legendTitle"  [showXAxisLabel]="showXAxisLabel"  [xAxis]="showXAxis" [showYAxisLabel]="showYAxisLabel" [yAxis]="showYAxis" [xAxisLabel]="issuesxAxisLabel" [yAxisLabel]="issuesyAxisLabel" [gradient]="gradient" [timeline]="timeline" [trimXAxisTicks]="trimXAxisTicks">
+                                    </ngx-charts-area-chart-stacked> -->
+                                    <div *ngIf="!issuesLogsDisplay">
+                                        No data to display Issues - Logs!
                                     </div>
                                 </div>
                             </div>
-                    </mat-drawer-container>
+                        </div>
                 </div>
             </div>
             <!-- /.row -->
