--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -554,16 +554,16 @@
                     <div class="col-sm-11 noPaddingRight">
                       <ul class="nav tab-lined nav-tabs logAndMetricTabs" id="myTab" role="tablist" (click)="onClickTab($event.target.id)">
                         <li class="nav-item" *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'">
-                          <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}"  id="log-analysis-tab" data-toggle="tab" role="tab" aria-controls="log-analysis" aria-selected="true">Log Analysis</a>
+                          <a class="nav-link" [ngClass]="{'active': selectedTab == 'log-analysis'}"  id="log-analysis-tab" data-toggle="tab" role="tab" aria-controls="log-analysis" aria-selected="true">Log Analysis</a>
                         </li>
                         <li *ngIf="deploymentApplicationHealth['analysisType'] === 'Metrics Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="nav-item">
-                          <a class="nav-link" [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Metrics Only'}" id="metric-analysis-tab" data-toggle="tab" role="tab" aria-controls="metric-analysis" aria-selected="true">Metric Analysis</a>
+                          <a class="nav-link" [ngClass]="{'active': selectedTab == 'metric-analysis'}" id="metric-analysis-tab" data-toggle="tab" role="tab" aria-controls="metric-analysis" aria-selected="true">Metric Analysis</a>
                         </li>
                         <!-- <li *ngIf="deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'" class="nav-item">
                           <a class="nav-link"  id="correlation-tab" data-toggle="tab" role="tab" aria-controls="correlation" aria-selected="true">Correlation</a>
                         </li> -->
                         <li class="nav-item">
-                          <a class="nav-link"  id="correlation-tab" data-toggle="tab" role="tab" aria-controls="correlation" aria-selected="true">Correlation</a>
+                          <a class="nav-link" [ngClass]="{'active': selectedTab === 'correlation'}" id="correlation-tab" data-toggle="tab" role="tab" aria-controls="correlation" aria-selected="true">Correlation</a>
                         </li>
                         
                 
@@ -580,7 +580,7 @@
                 
                   <div class="tab-content" id="myTabContent" >
                     <div class="tab-pane p-4 fade " id="log-analysis" role="tabpanel" aria-labelledby="log-analysis-tab"
-                    [ngClass]="{'active': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics','show': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}">
+                    [ngClass]="{'active': selectedTab == 'log-analysis','show': deploymentApplicationHealth['analysisType'] === 'Logs Only' || deploymentApplicationHealth['analysisType'] === 'Logs and Metrics'}">
                         <ng-container *ngIf = "selectedTab === 'log-analysis'">
                           <app-log-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" [isRerun]="isRerunLogs" (selectedServiceIdFromChild)="getlogAnalysisData($event)" (enterdToLogLines)="getEventsFromLogAnalysis($event)"></app-log-analysis>
                         </ng-container>
@@ -591,10 +591,10 @@
                           <app-metric-analysis [canaryId]="control.value" [serviceId]="selectedServiceId" ></app-metric-analysis>
                         </ng-container>
                       </div>
-                      <div class="tab-pane mp-4 mtneg"  id="correlation" role="tabpanel" aria-labelledby="correlation-tab"
+                      <div class="tab-pane mp-4 "  id="correlation" role="tabpanel" aria-labelledby="correlation-tab"
                       [ngClass]="{'active': selectedTab === 'correlation'}">
                         <ng-container *ngIf = "selectedTab === 'correlation'">
-                          <app-correlation [canaryId]="control.value" [serviceId]="selectedServiceId" [serviceList] = "deploymentServices.services" ></app-correlation>
+                          <app-correlation [canaryId]="control.value" [serviceId]="selectedServiceId" [serviceList] = "deploymentServices.services" [analysisType]="deploymentApplicationHealth['analysisType']" ></app-correlation>
                         </ng-container>
                       </div>
                   </div>
