--- a/src/app/application/deployment-verification/correlation/correlation.component.html
+++ b/src/app/application/deployment-verification/correlation/correlation.component.html
@@ -26,7 +26,7 @@
   <!-- <button type="button" class="btn btn-primary" (click)="openModal(template)">Create template modal</button>
    -->
    <!-- button to add log bar graph -->
-   <div #subChartSize class="buttonDiv width100">
+   <div #subChartSize class="buttonDiv width100" *ngIf = "analysisType=='Logs Only' || analysisType=='Logs and Metrics'">
   <button class="btn btn-default float-right  addBtns" (click)="openModal(template,'log')">Add Logs</button>
   </div>
   
@@ -52,8 +52,8 @@
       
       
     </ng-template>
-
-    <div class="buttonDiv">
+    
+    <div class="buttonDiv" *ngIf = "analysisType=='Metrics Only' || analysisType=='Logs and Metrics'">
       <button type="button" class="btn btn-default float-right addBtns " (click)="openModal(template1,'metric')">Add Metrics</button>
       </div>
 
