--- a/src/app/application/trend-analysis/trend-analysis.component.less
+++ b/src/app/application/trend-analysis/trend-analysis.component.less
@@ -48,12 +48,18 @@ g.line-chart > g:last-of-type > g:nth-child(1) g.line-series > path {
     width: 100% !important;
     display: block !important;
 }
-.issuesPadding{
-    padding-top: 30px;
-}
 .riskPadding{
     padding: 0px !important;
 }
+.chartPaddingRight{
+    padding-right: 200px;
+}
 .issuesChartPadding{
     padding-left: 15px;
+}
+.issuesPadding{
+    padding-top: 30px;
+}
+.service-selection{
+  cursor: pointer;
 }
